--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
     "react-simple-maps": "^3.0.0",
-    "tailwindcss": "^4.0.0"
+    "tailwindcss": "^4.0.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
